# LocationInspectorTUI

./: .gitignore  Cargo.toml  README.md  loctui.toml
app/: Cargo.toml
app/data/example_data/: locations.json
app/data/example_data/polygons/: lon.json  nyc.json  syd.json  tyo.json
app/src/: app.rs  appstate.rs  coastlines.rs  component.rs  config.rs  db.rs  domain.rs  event.rs  layers.rs  main.rs  message.rs  model.rs  screens.rs  tui.rs  update.rs  view.rs
app/src/components/: map_view.rs
app/src/db/: db_connection.rs  file_db.rs
app/src/domain/: geometry.rs  location.rs
app/src/screens/: inspect_screen.rs  location_select_screen.rs  summary_screen.rs
configs/: loctui.toml
legacy/: Cargo.toml
legacy/src/: db.rs  event_handling.rs  lib.rs  main.rs  tui.rs  view.rs
legacy/src/db/: dict_db.rs
legacy/src/db/raw/: t.geojson
legacy/src/model/: geometry.rs  location.rs  main_screen.rs  screens.rs  summary_screen.rs
scripts/: example-area.sh  example-elevation.sh  example-population.sh
src/: db.rs  event_handling.rs  main.rs  model.rs  tui.rs  view.rs
src/db/: dict_db.rs
src/model/: geometry.rs  inspect_screen.rs  main_screen.rs  summary_screen.rs
