[package]
name = "loctui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
geo = { version = "0.28.0", features = ["use-proj"] }
proj = { version = "0.27.2", features = ["geo-types"] }
ratatui = "0.26.1"
